-------------------------------------------------------------------------------
Changes in version 1.004

- Portability fixes for *BSD (possibly others).

- #define MSG_NO_DEBUG before including <msg/msg.h> and no debugging
  messages will be compiled into the object code.

- Added long long str_cat*ll functions.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.003

- Optimized path matching to only stat intermediate entries if they
  don't contain any meta-characters, instead of reading the entire
  directory and matching.
- Fixed a bug in str/cmp.c: it missed adding offset to the string
  pointer.
- Fixed bug in iobuf/[io]buf_seek.c -- seeks to the current read/write
  position should not cause an lseek syscall.
- The iobuf library now uses an anonymous mmap region for I/O instead of
  a malloced buffer, if possible.  Some OS's can optimize away a data
  copy using this kind of mechanism.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.002

- Fixed bug in str_cat#s routines: they didn't increase the string
  length.

- Added crypto hash libraries (MD5, SHA1, SHA256, SHA512).

- Added a dict_foreach routine for iterating over the contents of a
  dictionary.

- Removed the silly trailing "." from the common message output code.

- Portability fixes for FreeBSD (and possibly others).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.001

- Moved the file destination to /usr/local/bglibs/*
  from /usr/local/*/bglibs
- Added missing pwcmp/client include & library.